Fix commit contains problems 2